--- a/17_Multipart-froms/index.html
+++ b/17_Multipart-froms/index.html
@@ -59,6 +59,15 @@
         </form>
     </section>
 
+    <section>
+        <h2>Download File (FastAPI - Port 8000)</h2>
+        <form id="download-form">
+            <label for="download-filename">Filename:</label>
+            <input type="text" id="download-filename" placeholder="Enter filename to download" value="conf_int.png">
+            <button type="button" onclick="downloadFile()">Download</button>
+        </form>
+    </section>
+
     <script>
         // JavaScript for client-side validation remains the same
         // and will apply to all file inputs equally
@@ -80,6 +89,21 @@
                 }
             });
         });
+
+        // Function to download file from server
+        function downloadFile() {
+            const filename = document.getElementById("download-filename").value;
+            if (filename) {
+                const link = document.createElement("a");
+                link.href = `http://localhost:8000/download/${filename}`;
+                link.download = filename;
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+            } else {
+                alert("Please enter a filename.");
+            }
+        }
     </script>
 </body>
 </html>
