--- a/16_CORS/index.html
+++ b/16_CORS/index.html
@@ -1,3 +1,5 @@
+<!-- Alt cors er sat op i serverne-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,11 +15,12 @@
     <h2>Timestamp from FastAPI</h2>
     <p id="timestamp-fastapi"></p>
     
-
+    <!-- JavaScript-kode til at hente tidsstempler fra begge servere -->
     <script>
         fetch("http://localhost:8080/timestamp")
         .then((response) => response.json())
         .then((result) => {
+            // Vis tidsstemplet fra Express-serveren i HTML
             const timestampExpressParagraph = document.getElementById("timestamp-express");
             timestampExpressParagraph.textContent = result.time;
         });
@@ -25,6 +28,7 @@
         fetch("http://localhost:8000/timestamp")
         .then((response) => response.json())
         .then((result) => {
+            // Vis tidsstemplet fra FastAPI-serveren i HTML
             const timestampExpressParagraph = document.getElementById("timestamp-fastapi");
             timestampExpressParagraph.textContent = result.time;
         });
