--- a/03_Modules/html_with_ESmodules/index.html
+++ b/03_Modules/html_with_ESmodules/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Modules</title>
 </head>
-<body>
+<body> <!--  -->
     
     feafafafaf
     <script src="./index.js" type="module"></script>
